--- a/epubreader/src/main/res/layout/activity_main.xml
+++ b/epubreader/src/main/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/app_bar_main"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/navHomeContainer"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navHomeContainer"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -13,7 +19,7 @@
         app:defaultNavHost="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/navigationBar"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/header"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationBar"
