--- a/epubreader/src/main/res/values/styles.xml
+++ b/epubreader/src/main/res/values/styles.xml
@@ -14,4 +14,10 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/white</item>
+    </style>
+
 </resources>
