--- a/epubreader/src/main/res/layout/fragment_home.xml
+++ b/epubreader/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/white"
+        app:tabTextAppearance="@style/CustomTextAppearanceTab"
         app:tabMode="scrollable"
         app:tabGravity="fill"
         app:layout_constraintStart_toStartOf="parent"
