--- a/epubreader/src/main/res/values/styles.xml
+++ b/epubreader/src/main/res/values/styles.xml
@@ -20,4 +20,10 @@
         <item name="colorAccent">@color/white</item>
     </style>
 
+    <!-- Set all caps for nav bar at home screen -->
+    <style name="CustomTextAppearanceTab" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
