--- a/epubreader/src/main/res/layout/activity_main.xml
+++ b/epubreader/src/main/res/layout/activity_main.xml
@@ -32,10 +32,12 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigationBar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/bottom_nav_height"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:background="?android:attr/windowBackground"
+            android:theme="@style/BottomNavigationViewTheme"
+            android:elevation="10dp"
             app:menu="@menu/menu_bottom_navigation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
