--- a/epubreader/src/main/res/menu/menu_bottom_navigation.xml
+++ b/epubreader/src/main/res/menu/menu_bottom_navigation.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_search"/>
     <item android:id="@+id/favoritesFragment"
         android:title="@string/favorites"
-        android:icon="@drawable/ic_star"/>
+        android:icon="@drawable/ic_favorite"/>
     <item android:id="@+id/readingFragment"
         android:title="@string/reading"
         android:icon="@drawable/ic_reading"/>
