--- a/epubreader/src/main/res/values/colors.xml
+++ b/epubreader/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="transparent">#00000000</color>
+    <color name="colorApp">#233874</color>
+    <color name="bottom_tab_bar_inactive">#757575</color>
 </resources>
