--- a/epubreader/src/main/res/values/styles.xml
+++ b/epubreader/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorApp</item>
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--        <item name="colorAccent">@color/colorAccent</item>-->
     </style>
 
     <!-- Splash theme -->
@@ -24,6 +24,12 @@
     <style name="CustomTextAppearanceTab" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Set background color for bottom tab bar when active/inactive -->
+    <style name="BottomNavigationViewTheme" parent="Theme.AppCompat.DayNight">
+        <item name="colorPrimary">@color/colorApp</item>
+        <item name="android:colorForeground">@color/bottom_tab_bar_inactive</item>
     </style>
 
 </resources>
